# AISC

./: .env.example  .gitignore  Blueprint.md  Makefile  MemoryArchitecture.md  ProjectPlan.md  RecursiveQualityEngine.md  docker-compose.yml  project.MD  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENT_SPECIFICATIONS.md  COMMUNICATION_PROTOCOL.md  DEPLOYMENT_ARCHITECTURE.md  EVENT_CATALOG.md  IMPLEMENTATION_ROADMAP.md  RAG_ARCHITECTURE.md  SECURITY_ARCHITECTURE.md  SELF_HEALING_ENGINE.md  SELF_LEARNING_ENGINE.md  SYSTEM_ARCHITECTURE.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/artifacts/: page.tsx
frontend/src/app/pipeline/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/quality/: page.tsx
infra/prometheus/: prometheus.yml
libs/aisc-events/: pyproject.toml
libs/aisc-events/aisc_events/: __init__.py
libs/aisc-events/tests/: test_models.py
libs/aisc-models/: pyproject.toml
libs/aisc-models/aisc_models/: __init__.py
libs/aisc-proto/: pyproject.toml
libs/aisc-proto/aisc/: __init__.py  events.proto
libs/aisc-scoring/: pyproject.toml
libs/aisc-scoring/aisc_scoring/: __init__.py  engine.py  loop.py
libs/aisc-scoring/tests/: test_scoring.py
libs/aisc-utils/: pyproject.toml
libs/aisc-utils/aisc_utils/: __init__.py
scripts/: demo.py  dev-setup.sh
services/agent-runtime/: Dockerfile  pyproject.toml  requirements.txt
services/agent-runtime/agent_runtime/: main.py
services/agent-runtime/agent_runtime/agents/: __init__.py  base.py  registry.py
services/agent-runtime/agent_runtime/agents/concrete/: __init__.py  architect_agent.py  developer_agent.py  devops_agent.py  learning_agent.py  monitoring_agent.py  pm_agent.py  qa_agent.py  research_agent.py  security_agent.py  self_healing_agent.py
services/agent-runtime/agent_runtime/llm/: anthropic_provider.py  base.py  deepseek_provider.py  ollama_provider.py  openai_provider.py  router.py
services/agent-runtime/agent_runtime/tools/: __init__.py  base.py  code_generation.py  git_ops.py  rag_query.py  static_analysis.py  web_search.py
services/agent-runtime/tests/: test_agents.py  test_core_agents.py  test_dev_agents.py  test_learning.py  test_llm.py  test_ops_agents.py  test_pm_agent.py  test_self_healing.py  test_tools.py
services/auth-service/: Dockerfile  pyproject.toml  requirements.txt
services/auth-service/auth_service/: __init__.py  main.py
services/auth-service/auth_service/middleware/: __init__.py  auth.py
services/auth-service/auth_service/models/: __init__.py  user.py
services/auth-service/auth_service/routes/: __init__.py  auth.py  users.py
services/auth-service/auth_service/services/: __init__.py
services/auth-service/src/: __init__.py  main.py
services/auth-service/src/models/: user.py
services/auth-service/src/routes/: auth.py
services/auth-service/src/services/: __init__.py  user_store.py
services/auth-service/tests/: test_auth.py
services/debate-service/: Dockerfile  pyproject.toml
services/debate-service/debate_service/: __init__.py  engine.py  main.py
services/debate-service/debate_service/routes/: __init__.py  debate.py
services/debate-service/tests/: test_debate.py
services/memory-service/: Dockerfile  pyproject.toml  requirements.txt
services/memory-service/memory_service/: __init__.py  main.py
services/memory-service/memory_service/routes/: __init__.py  memory.py
services/memory-service/memory_service/stores/: __init__.py  neo4j_store.py  pg_store.py  qdrant_store.py  redis_store.py
services/memory-service/tests/: test_memory.py
services/orchestrator-service/: Dockerfile  pyproject.toml  requirements.txt
services/orchestrator-service/orchestrator_service/: main.py
services/orchestrator-service/orchestrator_service/engine/: dependency.py  escalation.py  scheduler.py  workflow.py
services/orchestrator-service/orchestrator_service/routes/: __init__.py  orchestrator.py
services/orchestrator-service/tests/: test_engine.py
services/rag-service/: Dockerfile  pyproject.toml  requirements.txt
services/rag-service/rag_service/: main.py
services/rag-service/rag_service/routes/: __init__.py  rag.py
services/rag-service/tests/: test_rag.py
