[project]
name = "aisc-scoring"
version = "0.1.0"
description = "AISC Scoring Engine - metric definitions, evaluation, and loop control"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aisc_scoring*"]
