[project]
name = "aisc-agent-runtime"
version = "0.1.0"
description = "AISC Agent Runtime — hosts and executes all AI agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "openai>=1.30",
    "anthropic>=0.31",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "aisc-models",
    "aisc-utils",
    "aisc-events",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent_runtime*"]
