[project]
name = "aisc-orchestrator-service"
version = "0.1.0"
description = "AISC Orchestrator Service - workflow coordination"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "aisc-models",
    "aisc-utils",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["orchestrator_service*"]
